--- a/contribution/lang/arr.json
+++ b/contribution/lang/arr.json
@@ -1170,7 +1170,7 @@
  	 	},
  	 	"christmasGift": {
  	 	 	"name": {
- 	 	 	 	"trans": "Mysterious Container",
+ 	 	 	 	"trans": "Mysterious Containerrr",
  	 	 	 	"eng": "Mysterious Container"
  	 	 	},
  	 	 	"description": {
@@ -1189,7 +1189,7 @@
  	 	 	 	 	"legendaryChance",
  	 	 	 	 	"maxStack"
  	 	 	 	],
- 	 	 	 	"trans": "A shard that contains ad'ance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (stack up to ${maxStack} times) for 20 minutes. Extra chance to get Mystery Container during Christmas season.",
+ 	 	 	 	"trans": "A shard that contains ad'ance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (stack up to ${maxStack} times) for 20 minutes. Extra chance to get Mystery Containerrr during Christmas season.",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (stack up to ${maxStack} times) for 20 minutes. Extra chance to get Mystery Container during Christmas season."
  	 	 	},
  	 	 	"descriptionv2": {
@@ -1199,7 +1199,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "A shard that contains ad'ance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (stack up to ${maxStack} times) for ${time} minutes. Extra chance to get Mystery Container during Christmas season.",
+ 	 	 	 	"trans": "A shard that contains ad'ance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (stack up to ${maxStack} times) for ${time} minutes. Extra chance to get Mystery Containerrr during Christmas season.",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (stack up to ${maxStack} times) for ${time} minutes. Extra chance to get Mystery Container during Christmas season."
  	 	 	},
  	 	 	"descriptionv3": {
@@ -1232,7 +1232,7 @@
  	 	 	 	 	"percent",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable) for ${duration} minutes",
+ 	 	 	 	"trans": "Contains fragments o' ad'ance AI designed t' assist wit' upgradin' equipments. When used, decreases the chance o' destructi'e failure by ${percent}% (stackable) fer ${duration} minutes",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable) for ${duration} minutes"
  	 	 	}
  	 	},
@@ -1243,7 +1243,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online",
+ 	 	 	 	"trans": "Contains fragments o' ad'ance AI designed t' assist wit' upgradin' equipments. When used, decreases the chance o' destructi'e failure by ${percent}% (stackable fer ${maxStack} times) fer ${duration} minutes.This effect will apply t' all crewmates online",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online"
  	 	 	}
  	 	},
@@ -1926,7 +1926,7 @@
  	 	 	},
  	 	 	"levelSelect": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Level",
+ 	 	 	 	 	"trans": "Le'el",
  	 	 	 	 	"eng": "Level"
  	 	 	 	}
  	 	 	},
@@ -1937,15 +1937,15 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noItems": {
- 	 	 	 	"trans": "there is currently no items on sale for this category",
+ 	 	 	 	"trans": "Arr! tharr be currently no items on sale fer this category. Best be damn luck later, ya stroll!",
  	 	 	 	"eng": "there is currently no items on sale for this category"
  	 	 	},
  	 	 	"buy": {
- 	 	 	 	"trans": "Purchase",
+ 	 	 	 	"trans": "Buyin'",
  	 	 	 	"eng": "Purchase"
  	 	 	},
  	 	 	"remove": {
- 	 	 	 	"trans": "Remove",
+ 	 	 	 	"trans": "Remo'e",
  	 	 	 	"eng": "Remove"
  	 	 	}
  	 	},
@@ -2557,11 +2557,11 @@
  	 	 	 	 	 	"vars": [
  	 	 	 	 	 	 	"level"
  	 	 	 	 	 	],
- 	 	 	 	 	 	"trans": "printing level ${level} equipments",
+ 	 	 	 	 	 	"trans": "printin' le'el ${level} equipments",
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "equipment printing is based on your printing rank, level up your printing rank by printing more items",
+ 	 	 	 	 	 	"trans": "equipment printin' be based on yer printin' rank, level up yer printin' rank by printin' more items",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
@@ -2754,7 +2754,7 @@
  	 	 	 	 	"eng": "Decrypting shard"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "You may leave this page and come back later",
+ 	 	 	 	 	"trans": "Ye may leave this page 'n come back later",
  	 	 	 	 	"eng": "You may leave this page and come back later"
  	 	 	 	}
  	 	 	},
@@ -2798,16 +2798,16 @@
  	 	 	},
  	 	 	"preventDestructionButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Prevent Destruction",
+ 	 	 	 	 	"trans": "Pre'ent Destruction",
  	 	 	 	 	"eng": "Prevent Destruction"
  	 	 	 	}
  	 	 	},
  	 	 	"failureRateNoBreak": {
- 	 	 	 	"trans": "Chance of safe failure",
+ 	 	 	 	"trans": "Chance o' safe failure",
  	 	 	 	"eng": "Chance of safe failure"
  	 	 	},
  	 	 	"activateDescription": {
- 	 	 	 	"trans": "A Calibration Core is required to calibrate equipment",
+ 	 	 	 	"trans": "A Calibration Core be required t' calibrate equipment",
  	 	 	 	"eng": "A Calibration Core is required to calibrate equipment"
  	 	 	}
  	 	},
@@ -3214,7 +3214,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"playerCount"
  	 	 	 	],
- 	 	 	 	"trans": "${playerCount} player(s) connected",
+ 	 	 	 	"trans": "${playerCount} crewmate(s) connected",
  	 	 	 	"eng": "${playerCount} player(s) connected"
  	 	 	}
  	 	},
@@ -3240,7 +3240,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"gangName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Occupied by ${gangName}",
+ 	 	 	 	 	"trans": "Harbored by ${gangName}",
  	 	 	 	 	"eng": "Occupied by ${gangName}"
  	 	 	 	},
  	 	 	 	"occupationPoints": {
@@ -3442,7 +3442,7 @@
  	 	 	 	"eng": "Suspended"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Yer account has been suspended automatically by the system due t' Suspicious Activity",
+ 	 	 	 	"trans": "Yer account has been suspended automatically by the system due t' Unusual Acti'ity",
  	 	 	 	"eng": "Your account has been suspended automatically by the system due to Unusual Activity"
  	 	 	},
  	 	 	"content": {
@@ -3471,7 +3471,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors.",
+ 	 	 	 	 	"trans": "Ye found a locked loot box wit' color keypad, ye best be able t' unlock it wit' the correct sequence o' colors.",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
@@ -3485,7 +3485,7 @@
  	 	 	 	 	"eng": "seconds"
  	 	 	 	},
  	 	 	 	"colorBox": {
- 	 	 	 	 	"trans": "Click on this color below",
+ 	 	 	 	 	"trans": "Jab on this color below",
  	 	 	 	 	"eng": "Click on this color below"
  	 	 	 	},
  	 	 	 	"lose": {
@@ -3494,7 +3494,7 @@
  	 	 	 	 	 	"eng": "Decryption failed"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Click on the correct color sequence to unlock",
+ 	 	 	 	 	 	"trans": "Jab on the correct color sequence t' unlock",
  	 	 	 	 	 	"eng": "Click on the correct color sequence to unlock"
  	 	 	 	 	},
  	 	 	 	 	"button": {
@@ -3532,7 +3532,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "You have blocked ${playerName}",
+ 	 	 	 	 	"trans": "Yer 'ave blocked ${playerName}",
  	 	 	 	 	"eng": "You have blocked ${playerName}"
  	 	 	 	},
  	 	 	 	"unblock": {
@@ -3542,7 +3542,7 @@
  	 	 	},
  	 	 	"list": {
  	 	 	 	"empty": {
- 	 	 	 	 	"trans": "You have no blocked players.",
+ 	 	 	 	 	"trans": "Ye 'ave no blocked crewmates.",
  	 	 	 	 	"eng": "You have no blocked players."
  	 	 	 	}
  	 	 	},
@@ -4467,7 +4467,7 @@
  	 	},
  	 	"block": {
  	 	 	"title": {
- 	 	 	 	"trans": "Are you sure you want to block this player?",
+ 	 	 	 	"trans": "Are ye sure ye wants t' block this crewmate?",
  	 	 	 	"eng": "Are you sure you want to block this player?"
  	 	 	}
  	 	}
@@ -4582,7 +4582,7 @@
  	 	 	"eng": "Calibration Precision (Legendary)"
  	 	},
  	 	"upgradeChance4": {
- 	 	 	"trans": "Calibration Precision (Epic)",
+ 	 	 	"trans": "Calibration Precision (Prestige)",
  	 	 	"eng": "Calibration Precision (Prestige)"
  	 	},
  	 	"upgradeNoBreak": {
@@ -5577,7 +5577,7 @@
  	 	 	 	 	"enemyName",
  	 	 	 	 	"value"
  	 	 	 	],
- 	 	 	 	"trans": "${enemyName} attacked you, received ${value} damage",
+ 	 	 	 	"trans": "${enemyName} attacked ye, received ${value} damage",
  	 	 	 	"eng": "${enemyName} attacked you, received ${value} damage"
  	 	 	},
  	 	 	"playerAttack": {
@@ -5585,7 +5585,7 @@
  	 	 	 	 	"enemyName",
  	 	 	 	 	"value"
  	 	 	 	],
- 	 	 	 	"trans": "You attacked ${enemyName}, dealing ${value} damage",
+ 	 	 	 	"trans": "Ye attacked ${enemyName}, dealin' ${value} damage",
  	 	 	 	"eng": "You attacked ${enemyName}, dealing ${value} damage"
  	 	 	}
  	 	}
