--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -37,7 +37,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Souhaites-tu acheter des Unités, ou les utiliser ?"
+ 	 	 	 	 	"Souhaites-tu acheter ou utiliser des Unités ?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Do you want to buy Units, or use your Units?"
@@ -59,7 +59,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Salut ! Fais un don pour obtenir des avantages cosmétiques et pour aider à soutenir les jeux gratuits comme celui-ci !"
+ 	 	 	 	 	"Salut ! Fais un don pour obtenir des avantages cosmétiques et pour soutenir les jeux gratuits comme celui-ci !"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
@@ -100,7 +100,7 @@
  	 	},
  	 	"terminal": {
  	 	 	"name": {
- 	 	 	 	"trans": "Terminale",
+ 	 	 	 	"trans": "Terminal",
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
@@ -171,7 +171,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Insére un noyau de calibrage dans la machine, et je t'aiderai à calibrer n'importe quelle pièce de ton équipement."
+ 	 	 	 	 	"Insére un noyau de calibrage dans la machine, ensuite je t'aiderai à calibrer une pièce de ton équipement."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Insert a Calibration Core into the machine, and I shall help you calibrate any of your equipment."
@@ -184,7 +184,7 @@
  	 	 	 	"eng": "Lee's Trading Post"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Une boutique familiale te permettant de faire du commerce avec ce qu'ils ont trouvé en fouillant les ordures.",
+ 	 	 	 	"trans": "Une boutique familiale te permettant de faire du commerce avec les débris des objets recyclés.",
  	 	 	 	"eng": "A family run trading shop that lets you trade with what they have found while scavenging"
  	 	 	},
  	 	 	"canAccessError": {
@@ -193,7 +193,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Hé gamin ! Je m'appelle Lee ! Tu sais, tu n'es pas obligé de transporter tout ce que tu as dans tes poches."
+ 	 	 	 	 	"Hé gamin ! Je m'appelle Lee !! Tu sais, je peux t'aider à augmenter ta capacité de stockage de ton butin."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, I'm Lee, You know, you don't have to carry everything you own in your pockets."
@@ -257,7 +257,7 @@
  	 	},
  	 	"ammo": {
  	 	 	"name": {
- 	 	 	 	"trans": "Fabrication de munitions",
+ 	 	 	 	"trans": "Création de munitions",
  	 	 	 	"eng": "ammo crafting"
  	 	 	}
  	 	},
@@ -900,7 +900,7 @@
  	 	},
  	 	"clanDungeonKey": {
  	 	 	"name": {
- 	 	 	 	"trans": "Transmetteur d'ordre d'invasion de gang",
+ 	 	 	 	"trans": "[Gang] Transmetteur d'ordre d'invasion",
  	 	 	 	"eng": "Gang Invasion Order Transmitter"
  	 	 	},
  	 	 	"description": {
@@ -910,7 +910,7 @@
  	 	},
  	 	"clanResource": {
  	 	 	"name": {
- 	 	 	 	"trans": "Caisse de ravitaillement [Gang]",
+ 	 	 	 	"trans": "[Gang] Caisse de ravitaillement",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
  	 	 	"description": {
@@ -920,7 +920,7 @@
  	 	},
  	 	"clanExp": {
  	 	 	"name": {
- 	 	 	 	"trans": "Fragment de mémoire de gang crypté",
+ 	 	 	 	"trans": "[Gang] Fragment de mémoire de gang crypté",
  	 	 	 	"eng": "encrypted gang memory shard"
  	 	 	},
  	 	 	"description": {
@@ -1414,13 +1414,13 @@
  	 	},
  	 	"highQuality": {
  	 	 	"name": {
- 	 	 	 	"trans": "haute qualité",
+ 	 	 	 	"trans": "haute-qualité",
  	 	 	 	"eng": "high quality"
  	 	 	}
  	 	},
  	 	"rare": {
  	 	 	"name": {
- 	 	 	 	"trans": "peu fréquent",
+ 	 	 	 	"trans": "rare",
  	 	 	 	"eng": "rare"
  	 	 	}
  	 	},
@@ -5577,7 +5577,7 @@
  	 	 	 	 	"enemyName",
  	 	 	 	 	"value"
  	 	 	 	],
- 	 	 	 	"trans": "${enemyName} vous a attaqué, reçu ${value} Dommages",
+ 	 	 	 	"trans": "${enemyName} t'a attaqué et reçois ${value} de dommage",
  	 	 	 	"eng": "${enemyName} attacked you, received ${value} damage"
  	 	 	},
  	 	 	"playerAttack": {
@@ -5585,7 +5585,7 @@
  	 	 	 	 	"enemyName",
  	 	 	 	 	"value"
  	 	 	 	],
- 	 	 	 	"trans": "Vous avez attaqué ${enemyName}, traiter ${value} Dommages",
+ 	 	 	 	"trans": "Tu as attaqué ${enemyName} et infliges ${value} de dommage",
  	 	 	 	"eng": "You attacked ${enemyName}, dealing ${value} damage"
  	 	 	}
  	 	}
