Update fr.json  -  edited last new lines
revert some unwanted changes and correct trads of newly added content

--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1232,7 +1232,7 @@
  	 	 	 	 	"percent",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "Contient des fragments d'avance IA conçus pour aider à améliorer les équipements. Lorsqu'il est utilisé, diminue les risques d'échec destructeur par ${percent}% (empilable) pour ${duration} minutes",
+ 	 	 	 	"trans": "Contient des fragments d'IA avancé conçus pour aider à améliorer les équipements. Lorsqu'il est utilisé, diminue les risques d'échec destructeur par ${percent}% (cumulable ${maxStack} fois) pour ${duration} minutes.Ce effet s'appliquera à tous les joueurs en ligne",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable) for ${duration} minutes"
  	 	 	}
  	 	},
@@ -1243,7 +1243,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "Contient des fragments d'avance IA conçus pour aider à améliorer les équipements. Lorsqu'il est utilisé, diminue les risques d'échec destructeur par ${percent}% (empilable pour ${maxStack} fois) pour ${duration} minutes.Ce effet s'appliquera à tous les joueurs en ligne",
+ 	 	 	 	"trans": "Contient des fragments d'IA avancé conçus pour aider à améliorer les équipements. Lorsqu'il est utilisé, diminue les risques d'échec destructeur par ${percent}% (cumulable ${maxStack} fois) pour ${duration} minutes.Ce effet s'appliquera à tous les joueurs en ligne",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online"
  	 	 	}
  	 	},
@@ -1719,7 +1719,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"skipCount"
  	 	 	 	],
- 	 	 	 	"trans": "Sauter ${skipCount}",
+ 	 	 	 	"trans": "Skip de ${skipCount} joueurs",
  	 	 	 	"eng": "Skipping ${skipCount}"
  	 	 	},
  	 	 	"skipAvailable": {
@@ -1937,7 +1937,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noItems": {
- 	 	 	 	"trans": "Il n'y a actuellement aucun objet en vente pour cette catégorie",
+ 	 	 	 	"trans": "Il n'y a actuellement aucun objet en vente dans cette catégorie",
  	 	 	 	"eng": "there is currently no items on sale for this category"
  	 	 	},
  	 	 	"buy": {
@@ -2305,7 +2305,7 @@
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"trans": "Insére un objet",
- 	 	 	 	 	"eng": "Please inset an item"
+ 	 	 	 	 	"eng": "Please insert an item"
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
@@ -2442,7 +2442,7 @@
  	 	 	 	"eng": "Chance of safe failure"
  	 	 	},
  	 	 	"activateDescription": {
- 	 	 	 	"trans": "Un noyau d'étalonnage est nécessaire pour calibrer l'équipement",
+ 	 	 	 	"trans": "Un Noyau de Calibrage est nécessaire pour calibrer l'équipement",
  	 	 	 	"eng": "A Calibration Core is required to calibrate equipment"
  	 	 	}
  	 	},
@@ -2718,11 +2718,11 @@
  	 	 	 	 	 	"vars": [
  	 	 	 	 	 	 	"level"
  	 	 	 	 	 	],
- 	 	 	 	 	 	"trans": "Niveau d'impression ${level} Equipements",
+ 	 	 	 	 	 	"trans": "Impression d'équipements de niveau ${level}",
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "L'impression d'équipement est basée sur votre classement d'impression, nivelez votre rang d'impression en imprimant plus d'articles",
+ 	 	 	 	 	 	"trans": "Le niveau des équipements imprimés et basé sur ton niveau d'impression, augmentez votre rang d'impression en imprimant plus d'objets",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
@@ -3214,7 +3214,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"playerCount"
  	 	 	 	],
- 	 	 	 	"trans": "${playerCount} lecteur (s) connecté (s)",
+ 	 	 	 	"trans": "${playerCount} joueur(s) connecté(s)",
  	 	 	 	"eng": "${playerCount} player(s) connected"
  	 	 	}
  	 	},
@@ -3476,7 +3476,7 @@
  	 	 	 	},
  	 	 	 	"progress": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Déverrouiller les progrès",
+ 	 	 	 	 	 	"trans": "Progrès déverrouillé",
  	 	 	 	 	 	"eng": "Unlock progress"
  	 	 	 	 	}
  	 	 	 	},
@@ -3485,7 +3485,7 @@
  	 	 	 	 	"eng": "seconds"
  	 	 	 	},
  	 	 	 	"colorBox": {
- 	 	 	 	 	"trans": "Cliquez sur cette couleur ci-dessous",
+ 	 	 	 	 	"trans": "Cliquez sur la couleur ci-dessous",
  	 	 	 	 	"eng": "Click on this color below"
  	 	 	 	},
  	 	 	 	"lose": {
@@ -3508,20 +3508,20 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Les habitants de l'Ukraine, de la Russie et du monde entier souffrent parce que l'ambition d'un homme. \\ N faire de l'amour exploit, pas la guerre.",
+ 	 	 	 	"trans": "Les habitants de l'Ukraine, de la Russie et du monde entier souffrent a cause de l'ambition d'un homme. \n Faites l'exploit amour, pas la guerre.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
  	 	"rangeSelector": {
  	 	 	"selectMinValue": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Sélectionnez la valeur min",
+ 	 	 	 	 	"trans": "Sélectionnez la valeur minimale",
  	 	 	 	 	"eng": "Select min value"
  	 	 	 	}
  	 	 	},
  	 	 	"selectMaxValue": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Sélectionnez la valeur max",
+ 	 	 	 	 	"trans": "Sélectionnez la valeur maximale",
  	 	 	 	 	"eng": "Select max value"
  	 	 	 	}
  	 	 	}
@@ -5188,7 +5188,7 @@
  	 	 	"vars": [
  	 	 	 	"date"
  	 	 	],
- 	 	 	"trans": "Discount se termine en ${date}",
+ 	 	 	"trans": "La promotion se termine en ${date}",
  	 	 	"eng": "Discount ends in ${date}"
  	 	}
  	},
